--- a/src/controllers/itemDetails/index.html
+++ b/src/controllers/itemDetails/index.html
@@ -31,6 +31,12 @@
                     </div>
                 </button>
 
+                <button is="emby-button" type="button" class="button-flat btnRequest hide detailButton" title="${Request}">
+                    <div class="detailButton-content">
+                        <span class="material-icons detailButton-icon add" aria-hidden="true"></span>
+                    </div>
+                </button>
+
                 <button is="emby-button" type="button" class="button-flat btnPlayTrailer hide detailButton" title="${ButtonTrailer}">
                     <div class="detailButton-content">
                         <span class="material-icons detailButton-icon theaters" aria-hidden="true"></span>
